     suggestion for an acceptable name is given. (Daniel Watkins, #103023)

   * Leave port as None in transport objects if user doesn't
     specify a port in urls.
     (vincent Ladeuil, #150860)

   * Make sure Repository.fetch(self) is properly a no-op for all
     Repository implementations. (John Arbash Meinel, #158333)

   * ``merge --uncommitted`` can now operate on a single file.
     (Aaron Bentley, Lukáš Lalinský, #136890)

   * Obsolete packs are now cleaned up by pack and autopack operations.
     (Robert Collins, #153789)

   * Reconcile now shows progress bars. (Robert Collins, #159351)

   * ``RemoteBranch`` was not initializing ``self._revision_id_to_revno_map``
     properly. (John Arbash Meinel, #162486)

   * Removing an already-removed file reports the file does not exist. (Daniel
     Watkins, #152811)

   * Rename on Windows is able to change filename case.
     (Alexander Belchenko, #77740)

   * Return error instead of a traceback for ``bzr log -r0``.
     (Kent Gibson, #133751)

   * Return error instead of a traceback when bzr is unable to create
     symlink on some platforms (e.g. on Windows).
     (Alexander Belchenko, workaround for #81689)

   * Stderr output via logging mechanism now goes through encoded wrapper
     and no more uses utf-8, but terminal encoding instead. So all unicode
     strings now should be readable in non-utf-8 terminal.
     (Alexander Belchenko, #54173)

   * The error message when ``move --after`` should be used makes how to do so
     clearer. (Daniel Watkins, #85237)

   * Unicode-safe output from ``bzr info``. The output will be encoded
     using the terminal encoding and unrepresentable characters will be
     replaced by '?'. (Lukáš Lalinský, #151844)

   * Working trees are no longer created when pushing into a local no-trees
     repo. (Daniel Watkins, #50582)

   * Upgrade util/configobj to version 4.4.0.
     (Vincent Ladeuil, #151208).

   * Wrap medusa ftp test server as an FTPServer feature.